--- a/index.html
+++ b/index.html
@@ -3,11 +3,232 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <section class="header">
+      <div class="logo__place_header"><img src="./images/logo_place_header.svg" alt="Логотип"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link link" href="#">Узнать →</a>
+        </p>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic rotation"></div>
+    </section>
 
+    <section class="description">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="techniques page__section">
+      <h2 class="section-title page__title">Техники обучения</h2>
+      <h3 class="section-subtitle page__subtitle">Пять практик от Барбары Оакли</h3>
+      <div class="cards page__cards">
+
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-attention.png" alt="Иллюстрация: книга в руках">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </div>
+
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-recall.png" alt="Иллюстрация: скульптура думающего человека">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </div>
+
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-interliving.png" alt="Иллюстрация: фото объёмного помещения">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-question.png" alt="Иллюстрация: фото человека в комнате">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </div>
+
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-competence.png" alt="Иллюстрация: стопка книг на ладони">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="video">
+      <h2 class="section-title page__title">Видео на TED</h2>
+      <h3 class="section-subtitle page__subtitle">Для тех, кто любит прокрастинировать</h3>
+      <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=13" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0start=13" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+      <a class="feynman__link link" href="#">Подробнее →</a>
+    </section>
+
+    <section class="digits">
+      <h2 class="section-title page__title">Цифры и факты</h2>
+      <h3 class="section-subtitle page__subtitle">Про учёбу и мозг</h3>
+      <div class="table page__table">
+        <div class="table__cell">
+          <h3 class="table__heading">86 миллиардов</h3>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">2,1 миллиарда</h3>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1000 терабайт</h3>
+          <p class="table__text">Объём памяти человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">500 триллионов</h3>
+          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">420 миллионов</h3>
+          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">7-20 лет</h3>
+          <p class="table__text">Пик обучаемости</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1885 год</h3>
+          <p class="table__text">Открытие кривой забывания</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1889 год</h3>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h1 class="khan__title">Весь мир — школа</h1>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
+        <div class="khan__book-container">
+          <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Книга">
+          <a class="khan__buy-link link" href="#">Купить книгу →</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="kaufman">
+      <div class="kaufman__triangle rotation"></div>
+      <h2 class="section-title section-title_theme_dark page__title ">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle_theme_dark page__subtitle">От Джоша Кауфмана</h3>
+      <div class="table table_theme_dark page__table">
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">1</h3>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">2</h3>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">3</h3>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">4</h3>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">5</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">6</h3>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">7</h3>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">8</h3>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">9</h3>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading heading_theme_dark">10</h3>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="resources page__section">
+      <h2 class="section-title page__title ">Полезные ресурсы</h2>
+      <h3 class="section-subtitle page__subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <div class="resources__logo-zone">
+        <a class="resources__link link" href="#"><div class="resources__logo-zone_logo_arzamas"></div></a>
+        <a class="resources__link link" href="#"><div class="resources__logo-zone_logo_n1"></div></a>
+        <a class="resources__link link" href="#"><div class="resources__logo-zone_logo_strelka"></div></a>
+        <a class="resources__link link" href="#"><div class="resources__logo-zone_logo_polka"></div></a>
+    </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer__columns page__section">
+        <div class="footer__column_content_copyright">
+          <div class="logo__place_footer"><img src="./images/logo_place_footer.svg" alt="Логотип"></div>
+          <p class="footer__author">&copy; Александр Пряхин</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__column-links">
+            <a class="footer__column-link link" href="#">Главная</a>
+            <a class="footer__column-link link" href="#">Концепция</a>
+            <a class="footer__column-link link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <div class="footer__column-links">
+            <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="youtube logo"> YouTube</a>
+            <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="vk logo"> ВКонтакте</a>
+            <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="tiktok logo"> TikTok</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
