--- a/index.html
+++ b/index.html
@@ -224,17 +224,51 @@
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <nav class="footer__column-links">
-          <a class="footer__column-link" href="#">Главная</a>
-          <a class="footer__column-link" href="#">Концепция</a>
-          <a class="footer__column-link" href="#">Наставники</a>
+          <ul class="page__nav">
+            <li class="page__list">
+              <a class="footer__column-link" href="#">Главная</a>
+            </li>
+            <li class="page__list">
+              <a class="footer__column-link" href="#">Концепция</a>
+            </li>
+            <li class="page__list">
+              <a class="footer__column-link" href="#">Наставники</a>
+            </li>
+          </ul>
         </nav>
       </div>
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav class="footer__column-links">
-          <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="youtube logo"> YouTube</a>
-          <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="vk logo"> ВКонтакте</a>
-          <a class="footer__column-link link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="tiktok logo"> TikTok</a>
+          <ul class="page__nav">
+            <li class="page__list">
+              <a class="footer__column-link" href="#">
+                <img
+                  class="footer__social-icon"
+                  src="./images/youtube-icon.svg"
+                  alt="youtube logo"
+                > YouTube
+              </a>
+            </li>
+            <li class="page__list">
+              <a class="footer__column-link" href="#">
+                <img
+                  class="footer__social-icon"
+                  src="./images/vk_color_white.svg"
+                  alt="vk logo"
+                > ВКонтакте
+              </a>
+            </li>
+            <li class="page__list">
+              <a class="footer__column-link" href="#">
+                <img
+                  class="footer__social-icon"
+                  src="./images/tiktok-icon.svg"
+                  alt="tiktok logo"
+                > TikTok
+              </a>
+            </li>
+          </ul>
         </nav>
       </div>
     </div>
