--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
       <h2 class="section-title">Видео на TED</h2>
       <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
       <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=13" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0start=13" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" allowfullscreen></iframe>
+        <iframe
+          class="video__iframe"
+          src="https://www.youtube.com/embed/5MgBikgcWnY?start=13"
+          title="YouTube video player">
+        ></iframe>
+        <iframe
+          class="video__iframe"
+          src="https://www.youtube.com/embed/arj7oStGLkU?controls=0start=13"
+          title="YouTube video player"
+        ></iframe>
       </div>
     </section>
 
