--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header__square-pic rotation"></div>
   </header>
 
-  <main class="content">
+  <main>
 
     <section class="description">
       <div class="two-columns">
@@ -74,7 +74,7 @@
         <iframe
           class="video__iframe"
           src="https://www.youtube.com/embed/5MgBikgcWnY?start=13"
-          title="YouTube video player">
+          title="YouTube video player"
         ></iframe>
         <iframe
           class="video__iframe"
@@ -177,7 +177,7 @@
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">5</h3>
-          <p class="table__text table__heading_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">6</h3>
