the last one =)

--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
 
       <div class="resources__logo-zone">
         <a class="resources__link" href="#">
-          <img src="./images/logo/resources-arzamas.svg" alt="логотип арзамас">
+          <img src="./images/logo/resources-arzamas.svg" alt="логотип арзамас" class="page__resource">
         </a>
         <a class="resources__link" href="#">
-          <img src="./images/logo/resources-n1.svg" alt="логотип н1">
+          <img src="./images/logo/resources-n1.svg" alt="логотип н1" class="page__resource">
         </a>
         <a class="resources__link" href="#">
-          <img src="./images/logo/resources-polka.svg" alt="логотип полька">
+          <img src="./images/logo/resources-polka.svg" alt="логотип полька" class="page__resource">
         </a>
         <a class="resources__link" href="#">
-          <img src="./images/logo/resources-strelka.svg" alt="логотип стрелка">
+          <img src="./images/logo/resources-strelka.svg" alt="логотип стрелка" class="page__resource">
         </a>
       </div>
     </section>
